[tool.poetry]
name = "home-work-19-1"
version = "0.1.0"
description = ""
authors = ["Nickolay <psyangel93@mail.ru>"]
readme = "README.md"
packages = [{include = "home_work_19_1"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
